Add ImageViews to links

--- a/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
@@ -39,6 +39,7 @@
                 android:autoText="false"
                 android:id="@+id/infoHeading"/>
 
+            <!-- Youtube videos -->
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -99,6 +100,7 @@
                     </RelativeLayout>
                 </LinearLayout>
 
+                <!-- Links -->
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -117,6 +119,18 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:text="@string/info_link0" />
+
+                        <ImageView
+                            android:id="@+id/infoImage0"
+                            android:layout_below="@id/infoLink0"
+                            android:layout_width="300dp"
+                            android:layout_height="300dp"
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"
+                            android:onClick="openBrowser"
+                            android:src="@drawable/measurement_icon_512"
+                            android:scaleType="fitXY"
+                            android:tag="@string/info_link0_href" />
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -131,6 +145,18 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:text="@string/info_link1" />
+
+                        <ImageView
+                            android:id="@+id/infoImage1"
+                            android:layout_below="@id/infoLink1"
+                            android:layout_width="300dp"
+                            android:layout_height="300dp"
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"
+                            android:onClick="openBrowser"
+                            android:src="@drawable/questionnaire_icon_512"
+                            android:scaleType="fitXY"
+                            android:tag="@string/info_link1_href" />
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -145,6 +171,18 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:text="@string/info_link2" />
+
+                        <ImageView
+                            android:id="@+id/infoImage2"
+                            android:layout_below="@id/infoLink2"
+                            android:layout_width="300dp"
+                            android:layout_height="300dp"
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"
+                            android:onClick="openBrowser"
+                            android:src="@drawable/questionnaire_icon_512"
+                            android:scaleType="fitXY"
+                            android:tag="@string/info_link1_href" />
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -159,8 +197,20 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:text="@string/info_link3" />
+
+                        <ImageView
+                            android:id="@+id/infoImage3"
+                            android:layout_below="@id/infoLink3"
+                            android:layout_width="300dp"
+                            android:layout_height="300dp"
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"
+                            android:onClick="openBrowser"
+                            android:src="@drawable/questionnaire_icon_512"
+                            android:scaleType="fitXY"
+                            android:tag="@string/info_link1_href" />
                     </RelativeLayout>
-                </LinearLayout>
+               </LinearLayout>
 
             </LinearLayout>
 
