--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
@@ -36,7 +36,7 @@
             android:layout_gravity="center_horizontal" >
 
             <RelativeLayout
-                android:layout_weight="0.25"
+                android:layout_weight="0.2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#eeeeee"
@@ -53,7 +53,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="0.25"
+                android:layout_weight="0.2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/nav_layout1" >
@@ -69,7 +69,23 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="0.25"
+                android:layout_weight="0.2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/nav_layout_back" >
+
+                <Button
+                    android:onClick="goBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Back"
+                    android:id="@+id/button_back"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_weight="0.2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/nav_layout2" >
@@ -85,7 +101,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="0.25"
+                android:layout_weight="0.2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/nav_layout3">
