--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_view.xml
@@ -67,13 +67,17 @@
                     android:layout_weight="0.25"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/nav_layout1" />
+                    android:id="@+id/nav_layout_back">
 
-                <RelativeLayout
-                    android:layout_weight="0.25"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/nav_layout2" />
+                    <Button
+                        android:onClick="goBack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Back"
+                        android:id="@+id/button_back"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true" />
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_weight="0.25"
@@ -97,92 +101,4 @@
 
     </RelativeLayout>
 
-
 </LinearLayout>
-
-
-
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-    <!--tools:context="au.edu.adelaide.connected_health_app.SingleItemViewActivity">-->
-
-    <!--<LinearLayout-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_centerHorizontal="true">-->
-
-        <!--<RelativeLayout-->
-            <!--android:weightSum="3"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:layout_weight="0.85"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:background="@android:color/background_light"-->
-            <!--android:id="@+id/main_layout">-->
-
-        <!--</RelativeLayout>-->
-
-        <!--<LinearLayout-->
-            <!--android:orientation="horizontal"-->
-            <!--android:layout_weight="0.15"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_horizontal" >-->
-
-            <!--<RelativeLayout-->
-                <!--android:layout_weight="0.25"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:background="#eeeeee"-->
-                <!--android:id="@+id/nav_layout0">-->
-
-                <!--<Button-->
-                    <!--android:onClick="goToPreviousItem"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="Previous"-->
-                    <!--android:id="@+id/button_previous"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_centerHorizontal="true" />-->
-            <!--</RelativeLayout>-->
-
-            <!--<RelativeLayout-->
-                <!--android:layout_weight="0.25"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:id="@+id/nav_layout1" />-->
-
-            <!--<RelativeLayout-->
-                <!--android:layout_weight="0.25"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:id="@+id/nav_layout2" />-->
-
-            <!--<RelativeLayout-->
-                <!--android:layout_weight="0.25"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:id="@+id/nav_layout3">-->
-
-                <!--<Button-->
-                    <!--android:onClick="goToNextItem"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="Next"-->
-                    <!--android:id="@+id/button_next"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_centerHorizontal="true" />-->
-            <!--</RelativeLayout>-->
-        <!--</LinearLayout>-->
-    <!--</LinearLayout>-->
-
-<!--</RelativeLayout>-->
