--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
@@ -49,7 +49,8 @@
                     android:text="Previous"
                     android:id="@+id/button_previous"
                     android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:drawableLeft="@drawable/previous_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -65,7 +66,8 @@
                     android:text="Edit"
                     android:id="@+id/button5"
                     android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:drawableLeft="@drawable/edit_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -81,7 +83,8 @@
                     android:text="Back"
                     android:id="@+id/button_back"
                     android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:drawableLeft="@drawable/back_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -97,7 +100,8 @@
                     android:text="Delete"
                     android:id="@+id/button_delete"
                     android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:drawableRight="@drawable/bin_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -113,7 +117,8 @@
                     android:text="Next"
                     android:id="@+id/button_next"
                     android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:drawableRight="@drawable/next_icon"/>
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
