--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_view.xml
@@ -60,7 +60,8 @@
                         android:text="Previous"
                         android:id="@+id/button_previous"
                         android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_centerHorizontal="true"
+                        android:drawableLeft="@drawable/previous_icon"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -76,7 +77,8 @@
                         android:text="Back"
                         android:id="@+id/button_back"
                         android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_centerHorizontal="true"
+                        android:drawableLeft="@drawable/back_icon"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -92,7 +94,8 @@
                         android:text="Next"
                         android:id="@+id/button_next"
                         android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_centerHorizontal="true"
+                        android:drawableRight="@drawable/next_icon"/>
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
