--- a/grailsApp/ConnectedHealth/grails-app/assets/stylesheets/main.css
+++ b/grailsApp/ConnectedHealth/grails-app/assets/stylesheets/main.css
@@ -638,39 +638,56 @@ a.skip {
 }
 
 .sectionButton{
-    color: yellow;
     border-radius: 5mm;
     height: 100%;
     width: 47%;
     margin:1%;
-    position: relative
+    position: relative;
+}
+
+.sectionButton:hover{
+    cursor: pointer;
 }
 
 .sectionButtonR{
     left:1%;
     float: left;
-    background-color: red;
+/*    background-color: red;*/
+    color: red;
 }
 
 .sectionButtonR:hover{
-    background-color: #FF5555;
-    cursor: pointer;
+    -moz-box-shadow: 0 0 5px red;
+    -webkit-box-shadow: 0 0 5px red;
+    box-shadow: 0px 0px 5px red;
 }
 
 .sectionButtonB{
     right:1%;
     float: right;
-    background-color: blue;
+    color: blue;
 }
 
 .sectionButtonB:hover{
-    background-color: #5555FF;
-    cursor: pointer;
+    -moz-box-shadow: 0 0 5px blue;
+    -webkit-box-shadow: 0 0 5px blue;
+    box-shadow: 0px 0px 5px blue;
 }
 
 .sectionButton h1{
     text-align: center;
-    color: #ffff00;
+    font-size:45pt;
+}
+
+.sectionButtonR h1{
+    color: red;
+    text-align: center;
+    font-size:45pt;
+}
+
+.sectionButtonB h1{
+    color: blue;
+    text-align: center;
     font-size:45pt;
 }
 
