--- a/Connected_Health_App/app/src/main/res/layout/quick_menu_bar.xml
+++ b/Connected_Health_App/app/src/main/res/layout/quick_menu_bar.xml
@@ -8,14 +8,14 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         tools:context="au.edu.adelaide.connected_health_app.InformationViewActivity"
         android:orientation="horizontal"
         android:weightSum="4">
 
         <RelativeLayout
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/holo_orange_dark">
 
@@ -24,14 +24,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:src="@drawable/info_icon"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignParentTop="false"
+                android:layout_alignParentBottom="false"
+                android:layout_alignWithParentIfMissing="false"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/holo_blue_dark">
 
@@ -40,14 +42,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:src="@drawable/questionnaire_icon"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignParentTop="false"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/holo_red_light">
 
@@ -56,14 +58,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:src="@drawable/profile_icon"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignParentTop="false"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/holo_green_dark">
 
@@ -72,9 +74,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:src="@drawable/measurement_icon"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/measurement_icon" />
+                android:layout_alignParentTop="false"
+                android:background="@drawable/measurement_icon"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
