--- a/Connected_Health_App/app/src/main/res/layout/generic_text_preview_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_text_preview_view.xml
@@ -58,6 +58,13 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:padding="5dp" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView0"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true" />
                 </RelativeLayout>
                 <RelativeLayout
                     android:onClick="goToSingleItemView"
@@ -77,6 +84,13 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:padding="5dp" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView1"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true" />
                 </RelativeLayout>
                 <RelativeLayout
                     android:onClick="goToSingleItemView"
@@ -97,6 +111,13 @@
                         android:layout_alignParentStart="true"
                         android:padding="5dp"
                         android:autoText="false" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView2"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true" />
                 </RelativeLayout>
             </LinearLayout>
 
