--- a/Connected_Health_App/app/src/main/res/layout/activity_single_item_edit.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_single_item_edit.xml
@@ -39,10 +39,10 @@
                 android:id="@+id/main_layout">
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
-                    android:ems="10"
+                    android:ems="500"
                     android:id="@+id/editText"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" />
@@ -62,14 +62,14 @@
                     android:id="@+id/nav_layout0">
 
                     <Button
-                        android:onClick="goToPreviousItem"
+                        android:onClick="goToConfirmEdit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Save"
                         android:id="@+id/button_save"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
-                        android:drawableLeft="@drawable/previous_icon"/>
+                        android:drawableLeft="@drawable/confirm_icon"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -87,14 +87,14 @@
                     android:id="@+id/nav_layout3">
 
                     <Button
-                        android:onClick="goToNextItem"
+                        android:onClick="goToCancelEdit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Cancel"
                         android:id="@+id/button_cancel"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
-                        android:drawableRight="@drawable/next_icon"/>
+                        android:drawableRight="@drawable/cancel_icon"/>
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
