--- a/Connected_Health_App/app/src/main/res/layout/generic_text_preview_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_text_preview_view.xml
@@ -29,7 +29,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:background="@android:color/white">
+            android:background="@android:color/white"
+            android:id="@+id/main_layout">
 
             <LinearLayout
                 android:weightSum="3"
@@ -38,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp">
+                android:layout_margin="1dp">
 
                 <RelativeLayout
                     android:onClick="goToSingleItemView"
@@ -47,9 +48,10 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/holo_red_light"
                     android:id="@+id/preview0"
-                    android:layout_margin="10dp">
+                    android:layout_margin="5dp">
 
                     <TextView
+                        android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -66,9 +68,10 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/holo_red_light"
                     android:id="@+id/preview1"
-                    android:layout_margin="10dp">
+                    android:layout_margin="5dp">
 
                     <TextView
+                        android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -85,9 +88,10 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/holo_red_light"
                     android:id="@+id/preview2"
-                    android:layout_margin="10dp">
+                    android:layout_margin="5dp">
 
                     <TextView
+                        android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -107,7 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp">
+                android:layout_margin="1dp">
 
                 <RelativeLayout
                     android:layout_weight="1"
@@ -119,7 +123,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Newer"
-                        android:id="@+id/button"
+                        android:id="@+id/left_nav_button"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:drawableLeft="@drawable/previous_icon"/>
@@ -142,7 +146,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Older"
-                        android:id="@+id/button7"
+                        android:id="@+id/right_nav_button"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:drawableRight="@drawable/next_icon"/>
