--- a/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
@@ -14,10 +14,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/small_margin"
+        android:paddingLeft="@dimen/small_margin"
+        android:paddingTop="@dimen/small_margin"
+        android:paddingBottom="@dimen/small_margin"
         android:background="@android:color/darker_gray">
 
         <!--Content-->
