--- a/Connected_Health_App/app/src/main/res/layout/generic_measurement_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_measurement_view.xml
@@ -14,8 +14,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
-        >
+        android:layout_margin="@dimen/small_margin"
+        android:id="@+id/main_layout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +34,6 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Measurement: Steps"
                 android:id="@+id/measurementHeading"
-                android:autoText="false"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_margin="20dp"
