--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
@@ -1,34 +1,48 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="au.edu.adelaide.connected_health_app.SingleItemViewActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="au.edu.adelaide.connected_health_app.SingleItemViewActivity"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <!--Quick Menu Bar-->
+    <include layout="@layout/quick_menu_bar"
+        android:id="@+id/quickMenuBar"/>
+
+    <!--Padding-->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@android:color/darker_gray">
 
-        <include layout="@layout/quick_menu_bar"
-            android:id="@+id/quickMenuBar"/>
-
-        <RelativeLayout
-            android:weightSum="3"
-            android:orientation="horizontal"
-            android:layout_weight="0.85"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@android:color/background_light"
-            android:id="@+id/main_layout">
-
-        </RelativeLayout>
-
+        <!--Content-->
         <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true">
+
+            <!--Main Display-->
+            <RelativeLayout
+                android:weightSum="3"
+                android:orientation="horizontal"
+                android:layout_weight="0.85"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@android:color/background_light"
+                android:id="@+id/main_layout">
+
+            </RelativeLayout>
+
+            <!--Buttons-->
+            <LinearLayout
             android:orientation="horizontal"
             android:layout_weight="0.15"
             android:layout_width="match_parent"
@@ -36,91 +50,96 @@
             android:layout_gravity="center_horizontal" >
 
             <RelativeLayout
-                android:layout_weight="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#eeeeee"
-                android:id="@+id/nav_layout0">
+            android:layout_weight="0.2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/nav_layout0">
 
-                <Button
-                    android:onClick="goToPreviousItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Previous"
-                    android:id="@+id/button_previous"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:drawableLeft="@drawable/previous_icon"/>
+            <Button
+            android:onClick="goToPreviousItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Previous"
+            android:id="@+id/button_previous"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:drawableLeft="@drawable/previous_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/nav_layout1" >
+            android:layout_weight="0.2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/nav_layout1" >
 
-                <Button
-                    android:onClick="goToEditItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Edit"
-                    android:id="@+id/button5"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:drawableLeft="@drawable/edit_icon"/>
+            <Button
+            android:onClick="goToEditItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit"
+            android:id="@+id/button5"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:drawableLeft="@drawable/edit_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/nav_layout_back" >
+            android:layout_weight="0.2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/nav_layout_back" >
 
-                <Button
-                    android:onClick="goBack"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Back"
-                    android:id="@+id/button_back"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:drawableLeft="@drawable/back_icon"/>
+            <Button
+            android:onClick="goBack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:id="@+id/button_back"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:drawableLeft="@drawable/back_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/nav_layout2" >
+            android:layout_weight="0.2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/nav_layout2" >
 
-                <Button
-                    android:onClick="goToDeleteItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Delete"
-                    android:id="@+id/button_delete"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:drawableRight="@drawable/bin_icon"/>
+            <Button
+            android:onClick="goToDeleteItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:id="@+id/button_delete"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:drawableRight="@drawable/bin_icon"/>
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/nav_layout3">
+            android:layout_weight="0.2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/nav_layout3">
 
-                <Button
-                    android:onClick="goToNextItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Next"
-                    android:id="@+id/button_next"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:drawableRight="@drawable/next_icon"/>
+            <Button
+            android:onClick="goToNextItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Next"
+            android:id="@+id/button_next"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:drawableRight="@drawable/next_icon"/>
             </RelativeLayout>
+            </LinearLayout>
+
+            <!--End of Buttons-->
         </LinearLayout>
-    </LinearLayout>
 
-</RelativeLayout>
+        <!--End of Content-->
+
+    </RelativeLayout>
+
+</LinearLayout>
