--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_view.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="au.edu.adelaide.connected_health_app.SingleItemViewActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/">
 
     <!--Quick Menu Bar-->
     <include layout="@layout/quick_menu_bar"
