--- a/Connected_Health_App/app/src/main/res/layout/generic_text_icon_preview.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_text_icon_preview.xml
@@ -32,7 +32,7 @@
                     android:src="@drawable/journal_icon_512"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageView8" />
+                    android:id="@+id/icon0" />
 
                 <TextView
                     android:layout_weight="200"
