--- a/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
@@ -37,7 +37,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:autoText="false"
-                android:id="@+id/infoHeading"/>
+                android:id="@+id/infoHeading"
+                android:textSize="40dp" />
 
             <!-- Youtube videos -->
             <LinearLayout
