--- a/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
@@ -1,9 +1,59 @@
+<!--<LinearLayout-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--tools:context="au.edu.adelaide.connected_health_app.ProfileViewActivity"-->
+    <!--android:orientation="vertical">-->
+
+    <!--&lt;!&ndash;Quick Menu Bar&ndash;&gt;-->
+    <!--<include layout="@layout/quick_menu_bar"-->
+        <!--android:id="@+id/quickMenuBar"/>-->
+
+    <!--&lt;!&ndash;Padding&ndash;&gt;-->
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+        <!--android:background="@android:color/darker_gray">-->
+
+        <!--&lt;!&ndash;Content&ndash;&gt;-->
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@android:color/white">-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textSize="26sp"-->
+                <!--android:id="@+id/profile_content"-->
+                <!--android:letterSpacing="5" />-->
+
+            <!--<Button-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Edit"-->
+                <!--android:id="@+id/profile_edit"-->
+                <!--android:onClick="goToProfileEdit"-->
+                <!--android:layout_below="@+id/profile_content"-->
+                <!--android:layout_toRightOf="@+id/profile_content"-->
+                <!--android:layout_toEndOf="@+id/profile_content" />-->
+
+        <!--</RelativeLayout>-->
+
+    <!--</RelativeLayout>-->
+<!--</LinearLayout>-->
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="au.edu.adelaide.connected_health_app.ProfileViewActivity"
+    tools:context="au.edu.adelaide.connected_health_app.SingleItemViewActivity"
     android:orientation="vertical">
 
     <!--Quick Menu Bar-->
@@ -14,68 +64,88 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/small_margin"
+        android:paddingLeft="@dimen/small_margin"
+        android:paddingTop="@dimen/small_margin"
+        android:paddingBottom="@dimen/small_margin"
         android:background="@android:color/darker_gray">
 
         <!--Content-->
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white">
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!--Main Display-->
+            <RelativeLayout
+                android:weightSum="3"
+                android:orientation="horizontal"
+                android:layout_weight="0.85"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="26sp"
-                android:id="@+id/profile_content"
-                android:letterSpacing="5" />
+                android:layout_gravity="center_horizontal"
+                android:background="@android:color/background_light"
+                android:id="@+id/main_layout">
 
-            <Button
-                android:layout_width="wrap_content"
+                <!--Profile Content-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="26sp"
+                    android:id="@+id/profile_content"
+                    android:letterSpacing="5" />
+
+            </RelativeLayout>
+
+            <!--Buttons-->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_weight="0.15"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Edit"
-                android:id="@+id/profile_edit"
-                android:onClick="goToProfileEdit"
-                android:layout_below="@+id/profile_content"
-                android:layout_toRightOf="@+id/profile_content"
-                android:layout_toEndOf="@+id/profile_content" />
+                android:layout_gravity="center_horizontal" >
 
-        </RelativeLayout>
+                <RelativeLayout
+                    android:layout_weight="0.25"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/nav_layout_back">
+
+                    <Button
+                        android:onClick="goBack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Back"
+                        android:id="@+id/button_back"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:drawableLeft="@drawable/back_icon"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_weight="0.25"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/nav_layout0">
+
+                    <Button
+                        android:onClick="goToProfileEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Edit"
+                        android:id="@+id/profile_edit_button"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:drawableRight="@drawable/edit_icon"/>
+                </RelativeLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
         <!--End of Content-->
 
     </RelativeLayout>
+
 </LinearLayout>
-
-    <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--&lt;!&ndash;PROFILE VALUES-->
-        <!--1. first name-->
-        <!--2. last name-->
-        <!--3. address-->
-        <!--4. phone number-->
-        <!--5. email &ndash;&gt;-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textSize="26sp"-->
-            <!--android:id="@+id/profile_content"-->
-            <!--android:letterSpacing="5" />-->
-
-        <!--<Button-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Edit"-->
-            <!--android:id="@+id/profile_edit"-->
-            <!--android:onClick="goToProfileEdit"-->
-            <!--android:layout_below="@+id/profile_content"-->
-            <!--android:layout_toRightOf="@+id/profile_content"-->
-            <!--android:layout_toEndOf="@+id/profile_content" />-->
-    <!--</RelativeLayout>-->
-
-<!--</LinearLayout>-->
