--- a/Connected_Health_App/app/src/main/res/layout/generic_text_preview_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_text_preview_view.xml
@@ -155,6 +155,7 @@
                     android:layout_height="match_parent">
 
                     <Button
+                        style="@style/NavButton"
                         android:onClick="goToPreviousPage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -174,6 +175,7 @@
                     android:layout_height="match_parent">
 
                     <Button
+                        style="@style/NavButton"
                         android:onClick="goToNewItem"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -193,6 +195,7 @@
                     android:layout_height="match_parent">
 
                     <Button
+                        style="@style/NavButton"
                         android:onClick="goToNextPage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
