--- a/Connected_Health_App/app/src/main/res/values/styles.xml
+++ b/Connected_Health_App/app/src/main/res/values/styles.xml
@@ -5,4 +5,7 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="NavButton">
+        <item name="android:textSize">40dp</item>
+    </style>
 </resources>
