Larger text in single item view with reusable style.

--- a/Connected_Health_App/app/src/main/res/values/styles.xml
+++ b/Connected_Health_App/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
     <style name="NavButton">
         <item name="android:textSize">40dp</item>
     </style>
+
+    <style name="SingleItemContent">
+        <item name="android:background">@android:color/background_light</item>
+        <item name="android:padding">@dimen/small_margin</item>
+    </style>
 </resources>
