--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
@@ -30,15 +30,30 @@
 
             <!--Main Display-->
             <RelativeLayout
+                style="@style/SingleItemContent"
                 android:weightSum="3"
                 android:orientation="horizontal"
                 android:layout_weight="0.85"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@android:color/background_light"
                 android:id="@+id/main_layout">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="50dp"
+                    android:id="@+id/heading_text"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+                <TextView
+                    android:layout_below="@id/heading_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="40dp"
+                    android:id="@+id/content_text" />
             </RelativeLayout>
 
             <!--Buttons-->
